--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ Licence URI: https://www.os-templates.com/template-terms
     <div class="one_quarter"><strong><i class="far fa-clock rgtspace-5"></i> Vlek v provozu :</strong> 09.00 - 16.30
       <br /></div>
     <div class="one_quarter">
-      <strong><i class="fas fa-phone rgtspace-5"></i> Zavolejte nám:</strong> +00 (123) 456 7890
+      <strong><i class="fas fa-phone rgtspace-5"></i> Zavolejte nám:</strong> +420 602 879 598
     </div>
 
     <!-- ################################################################################################ -->
@@ -266,21 +266,20 @@ Licence URI: https://www.os-templates.com/template-terms
   <footer id="footer" class="hoc clear"> 
     <!-- ################################################################################################ -->
     <div class="one_quarter first">
-      <h6 class="heading">Nulla ullamcorper</h6>
+      <h6 class="heading">Kontakty</h6>
       <ul class="nospace btmspace-30 linklist contact">
         <li><i class="fas fa-map-marker-alt"></i>
           <address>
-          Street Name &amp; Number, Town, Postcode/Zip
+          Ski Lucifer
+          Josefův Důl 358 
+          468 44 okr. Jablonec nad Nisou
           </address>
         </li>
-        <li><i class="fas fa-phone"></i> +00 (123) 456 7890</li>
-        <li><i class="far fa-envelope"></i> info@domain.com</li>
+        <li><i class="fas fa-phone"></i> +420 602 879 598</li>
+        <li><i class="far fa-envelope"></i> info@skilucifer.cz</li>
       </ul>
       <ul class="faico clear">
         <li><a class="faicon-facebook" href="#"><i class="fab fa-facebook"></i></a></li>
-        <li><a class="faicon-twitter" href="#"><i class="fab fa-twitter"></i></a></li>
-        <li><a class="faicon-dribble" href="#"><i class="fab fa-dribbble"></i></a></li>
-        <li><a class="faicon-linkedin" href="#"><i class="fab fa-linkedin"></i></a></li>
       </ul>
     </div>
     <div class="one_quarter">
