--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ Licence URI: https://www.os-templates.com/template-terms
   <header id="header" class="hoc clear"> 
     <!-- ################################################################################################ -->
     <div id="logo" class="one_half first">
-      <h1><a href="index.html"><img src="images/lucifer_icon.png" style="height: 112px; float: left;"/></a></h1>
+      <h1><a href="index.html"><img src="images/imageedit_6_5516424223.png" style="height: 112px; float: left;"/></a></h1>
       <p style="font-size: 3.5rem;font-family: Georgia; line-height: normal; color: darkred; text-transform: capitalize;font-variant: small-caps; padding: 20px 20px 20px 160px;">Ski Lucifer</p>
     </div>
 
