--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ Licence URI: https://www.os-templates.com/template-terms
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
-<div class="wrapper bgded overlay" style="background-image:url('images/ski_lucifer.jpg'); background-position: bottom; padding-top: 40px;">
+<div class="wrapper bgded overlay" style="background-image:url('images/ski_lucifer.png'); background-position: bottom; padding-top: 40px;">
   <div id="pageintro" class="hoc clear"> 
     <!-- ################################################################################################ -->
     <article>
