cenik, kudy k nam

--- a/index.html
+++ b/index.html
@@ -49,7 +49,14 @@ Licence URI: https://www.os-templates.com/template-terms
     <!-- ################################################################################################ -->
     <ul class="clear">
       <li class="active"><a href="index.html">Hlavní stránka</a></li>
-      <li><a href="#">Ceník</a></li>
+      <li><a class="drop" href="#">Ceník</a>
+        <ul>
+          <li><a href="#velkyvlek-cenik">Velký vlek</a></li>
+          <li><a href="#malyvlek-cenik">Malý vlek</a></li>
+          <li><a href="#peklo-cenik">Peklo</a></li>
+          <li><a href="#pujcovna-cenik">Půjčovna</a></li>
+        </ul>
+      </li>
       <li><a href="#">Webkamera</a></li>
       <li><a class="drop" href="#">Ubytování</a>
         <ul>
@@ -57,7 +64,7 @@ Licence URI: https://www.os-templates.com/template-terms
           <li><a href="#">Penzion Niky</a></li>
         </ul>
       </li>
-      <li><a href="#">Kudy k nám</a></li>
+      <li><a href="#kudy-k-nam">Kudy k nám</a></li>
     </ul>
     <!-- ################################################################################################ -->
   </nav>
@@ -92,21 +99,48 @@ Licence URI: https://www.os-templates.com/template-terms
         <li class="one_third first">
           <article><a href="#"><i class="far fa-money-bill-alt"></i></a>
             <h6 class="heading">Ceník</h6>
-            <p>Lyžování již od 390Kč/den [&hellip;]</p>
-            <footer><a class="btn" href="#">Kompletní ceník</a></footer>
+            <p>Celodenní lyžování na Velkém vleku za 340Kč/den. Na Malém vleku za 190Kč/den.</p>
+            <footer><a class="btn" href="#cenik">Kompletní ceník</a></footer>
+          </article>
+        </li>
+        <li class="one_third">
+          <article><a href="#"><i class="fas fa-book"></i></a>
+            <h6 class="heading">Lyžařská škola</h6>
+            <p>Dokážeme naučit lyžovat malé i velké. Díky příjemně pomalému vleku Malý Lucifer a mírnému svahu,
+              se můžete v klidu naučit lyžovat. Ostatní, zdatnější, lyžaři z Vaší skupiny nebo rodiny mohou jezdit na Velkém Luciferu poblíž.
+              Na svahu Lucifer funguje soukromá lyžařská škola Arabela
+              Lyžařské lekce si můžete rezervovat přímo u paní Heleny Štrofové:
+              tel: +420 603 487 060
+              e-mail: <a href="mailto:helena.strofova@seznam.cz" target="_blank">helena.strofova@seznam.cz</a></p>
+          </article>
+        </li>
+        <li class="one_third">
+          <article><a href="#"><i class="fas fa-warehouse"></i></a>
+            <h6 class="heading">Půjčovna lyžařského vybavení</h6>
+            <p>Půjčujeme lyže, snowboard, běžky včetně veškerého příslušenství</p>
+            <footer><a class="btn" href="#">Ceník</a></footer>
+          </article>
+        </li>
+      </ul>
+      <ul class="nospace group">
+        <li class="one_third first">
+          <article><a href="#"><i class="far fa-building"></i></a>
+            <h6 class="heading">Roubenka u vleku</h6>
+            <p>Pronájem Roubenky za 3000Kč/den, která se nachází přímo u sjezdovky. Až 13 lůžek.</p>
+            <footer><a class="btn" href="#">Web Roubenky</a></footer>
+          </article>
+        </li>
+        <li class="one_third">
+          <article><a href="#"><i class="fas fa-building"></i></a>
+            <h6 class="heading">Penzion Niky</h6>
+            <p>Ubytování v apartmánech, k dispozici bazén a sauna. Od 280Kč/os.[&hellip;]</p>
+            <footer><a class="btn" href="#">Web Penzionu Niky</a></footer>
           </article>
         </li>
         <li class="one_third">
           <article><a href="#"><i class="fas fa-utensils"></i></a>
             <h6 class="heading">Hospůdka u vleku</h6>
-            <p>Nabízíme českou horskou klasiku[&hellip;]</p>
-          </article>
-        </li>
-        <li class="one_third">
-          <article><a href="#"><i class="fas fa-building"></i></a>
-            <h6 class="heading">Půjčovna a lyžařská škola</h6>
-            <p>Půjčujeme lyže, snowboard, běžky včetně veškerého příslušenství[&hellip;]</p>
-            <footer><a class="btn" href="#">Read More</a></footer>
+            <p>Nabízíme českou horskou klasiku.</p>
           </article>
         </li>
       </ul>
@@ -116,7 +150,7 @@ Licence URI: https://www.os-templates.com/template-terms
     <!-- ################################################################################################ -->
     <section>
       <div class="sectiontitle">
-        <h6 class="heading">Metus vestibulum fermentum</h6>
+        <h6 class="heading">Fotogalerie</h6>
         <p>Neque vel malesuada ultrices mi est vulputate ex sit amet</p>
       </div>
       <ul class="nospace group overview">
@@ -170,7 +204,343 @@ Licence URI: https://www.os-templates.com/template-terms
         </li>
       </ul>
     </section>
-    <!-- ################################################################################################ -->
+    <hr class="btmspace-80">
+    <section id="cenik">
+      <div class="sectiontitle">
+        <h6 class="heading">Ceník</h6>
+      </div>
+
+      <table id="velkyvlek-cenik" border="1" cellspacing="0" cellpadding="0" class="btmspace-80">
+        <thead>
+        <tr>
+        <th>
+          <p>Jízdné Velký Lucifer</p>
+        </th>
+        <th>
+          <p>Dospělí</p>
+        </th>
+        <th>
+          <p>Děti do 13 let</p>
+        </th>
+        </tr>
+        </thead>
+        <tr><td>
+          <p>1 jednotlivá jízda</p>
+        </td>
+          <td>
+            <p>25,- Kč</p>
+          </td>
+          <td>
+            <p>25,- Kč</p>
+          </td>
+        </tr><tr><td>
+        <p>1 hodina</p>
+      </td>
+        <td>
+          <p>100,- Kč</p>
+        </td>
+        <td>
+          <p>100,- Kč</p>
+        </td>
+      </tr><tr><td>
+        <p>3 hodiny</p>
+      </td>
+        <td>
+          <p>210,- Kč</p>
+        </td>
+        <td>
+          <p>210,- Kč</p>
+        </td>
+      </tr>
+        <tr><td>
+        <p>Celodenní permanentka</p>
+      </td>
+        <td >
+          <p>310Kč</p>
+        </td>
+        <td >
+          <p>270Kč</p>
+        </td>
+      </tr><tr><td >
+        <p>Zkrácená celodenní permanentka od 11 hod</p>
+      </td>
+        <td >
+          <p>260Kč</p>
+        </td>
+        <td >
+          <p>230Kč</p>
+        </td>
+      </tr><tr><td >
+        <p>Dopolední permanentka do 12.30</p>
+      </td>
+        <td >
+          <p>220Kč</p>
+        </td>
+        <td >
+          <p>190Kč</p>
+        </td>
+      </tr><tr><td >
+        <p>Odpolední permanentka od 12.30</p>
+      </td>
+        <td >
+          <p>220Kč</p>
+        </td>
+        <td >
+          <p>190Kč</p>
+        </td>
+      </tr><tr><td >
+        <p>2 dny</p>
+      </td>
+        <td >
+          <p>550Kč</p>
+        </td>
+        <td >
+          <p>460Kč</p>
+        </td>
+      </tr><tr><td >
+        <p>3 dny</p>
+      </td>
+        <td >
+          <p>750Kč</p>
+        </td>
+        <td >
+          <p>660Kč</p>
+        </td>
+      </tr><tr><td >
+        <p>4/7 (4 dny ze 7)</p>
+        <p>Neplati pro vlek Peklo</p>
+      </td>
+        <td >
+          <p>1000Kč</p>
+        </td>
+        <td >
+          <p>900Kč</p>
+        </td>
+      </tr><tr><td >
+        <p>Sezónní jízdné (nutné 1x foto)</p>
+      </td>
+        <td >
+          <p>3400Kč</p>
+        </td>
+        <td >
+          <p>3400Kč</p>
+        </td>
+      </tr></tbody></table>
+
+      <table id="malyvlek-cenik" border="1" cellspacing="0" cellpadding="0"  class="btmspace-80"><tbody>
+      <thead>
+      <tr><th>
+        <p>Jízdné Malý Lucifer</p>
+      </th>
+        <th>
+          <p>Dospělí<br></p>
+        </th>
+        <th>
+          <p>Děti do 13 let</p>
+        </th>
+      </tr>
+      </thead>
+      <tr><td >
+        <p>Celodenní permanentka</p>
+      </td>
+        <td >
+          <p>170Kč</p>
+        </td>
+        <td >
+          <p>150Kč</p>
+        </td>
+      </tr><tr><td >
+        <p>Zkrácená celodenní permanentka od 11 hod</p>
+      </td>
+        <td >
+          <p>150Kč</p>
+        </td>
+        <td >
+          <p>130Kč</p>
+        </td>
+      </tr><tr><td >
+        <p>Dopolední permanentka do 12.30</p>
+      </td>
+        <td >
+          <p>110Kč</p>
+        </td>
+        <td >
+          <p>100Kč</p>
+        </td>
+      </tr><tr><td >
+        <p>Odpolední permanentka od 12.30</p>
+      </td>
+        <td >
+          <p>110Kč</p>
+        </td>
+        <td >
+          <p>100Kč</p>
+        </td>
+      </tr></tbody></table>
+
+
+      <table id="peklo-cenik" border="1" cellspacing="0" cellpadding="0"  class="btmspace-80"><tbody>
+      <thead>
+      <tr><th>
+        <p>Jízdné Peklo</p>
+      </th>
+        <th>
+          <p>Jednotné jízdné</p>
+        </th>
+      </tr>
+      </thead>
+      <tr>
+        <tr><td>
+          <p>1 jízda</p>
+        </td>
+          <td>
+            <p>15,- Kč</p>
+          </td>
+        </tr><tr><td>
+          <p>10 jízd</p>
+        </td>
+          <td>
+            <p>130,- Kč</p>
+          </td>
+        </tr>
+
+        <td>
+        <p>Celodenní permanentka</p>
+      </td>
+        <td>
+          <p>200Kč</p>
+        </td>
+      </tr><tr><td >
+        <p>Zkrácená celodenní permanentka od 11 hod</p>
+      </td>
+        <td >
+          <p>180Kč</p>
+        </td>
+      </tr><tr><td >
+        <p>Dopolední permanentka do 12</p>
+      </td>
+        <td >
+          <p>130Kč</p>
+        </td>
+      </tr><tr><td >
+        <p>Odpolední permanentka od 12.30</p>
+      </td>
+        <td >
+          <p>130Kč</p>
+        </td>
+      </tr></tbody></table>
+
+
+      <table border="1" cellspacing="0" cellpadding="0"  class="btmspace-80"><tbody>
+      <thead>
+      <tr><th>
+        <p>Bodové jízdné pro:</strong><br><strong>Velký Lucifer - 1 jízda = 12 bodů</strong><br><strong>Malý Lucifer - 1 jízda = 4 body</strong></p>
+      </th>
+        <th>
+          <p><strong>Cena</strong></p>
+        </th>
+      </tr>
+      </thead>
+        <tr><td>
+        <p>60 bodů</p>
+      </td>
+        <td>
+          <p>120,-Kč</p>
+        </td>
+      </tr><tr><td>
+        <p>120 bodu</p>
+      </td>
+        <td>
+          <p>180,- Kč</p>
+        </td>
+      </tr><tr><td>
+        <p>180 bodů</p>
+      </td>
+        <td>
+          <p>270,- Kč</p>
+        </td>
+      </tr><tr><td>
+        <p>360 bodů</p>
+      </td>
+        <td>
+          <p>400,- Kč</p>
+        </td>
+      </tr></tbody></table>
+    </section>
+
+      <section id="pujcovna" class="btmspace-80">
+        <div class="sectiontitle">
+          <h6 class="heading">Půjčovna lyžařského vybavení</h6>
+          <p>Půjčujeme lyže, snowboard, běžky včetně veškerého příslušenství</p>
+        </div>
+        <h6 class="heading">Ceník</h6>
+      <table id="pujcovna-cenik" style="width:100%" border="1" cellspacing="0" cellpadding="3"><tbody>
+      <thead>
+      <tr>
+        <th colspan="2">
+          <p>Ceník půjčovného</p>
+        </th>
+      </tr>
+      </thead>
+      <tr>
+        <td>
+          <p>Sjezdové lyže  - komplet vybavení</p>
+        </td>
+        <td>
+          <p>100 - 250,- Kč / den</p>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <p>Lyžařská helma</p>
+        </td>
+        <td>
+          <p>50,- Kč / den</p>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <p>Běžky - komplet vybavení</p>
+        </td>
+        <td>
+          <p>120,- Kč / den</p>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <p>Snowboard - komplet vybavení</p>
+        </td>
+        <td>
+          <p>200-250,- Kč / den</p>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <p>Sáňky</p>
+        </td>
+        <td>
+          <p>80,- Kč / den</p>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <p>V létě horská kola</p>
+        </td>
+        <td>
+          <div>
+            <p>220,- Kč / den</p>
+          </div>
+        </td>
+      </tr>
+      </tbody></table>
+    </section>
+
+    <section id="kudy-k-nam">
+      <div class="sectiontitle">
+        <h6 class="heading">Kudy k nám</h6>
+      </div>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2522.249266921223!2d15.21121871597258!3d50.789488870757715!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x470eccbef803fe5d%3A0x1680351cc7628f1a!2sSki+Lucifer!5e0!3m2!1scs!2scz!4v1536955521806" width="800" height="650" frameborder="0" style="border:0" allowfullscreen></iframe>
+    </section>
     <!-- / main body -->
     <div class="clear"></div>
   </main>
