--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ Licence URI: https://www.os-templates.com/template-terms
 <title>Ski Lucifer</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <meta http-equiv="last-modified" content="Sun, 16 Sep 2018 09:00:46 GMT" />
 <link href="layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
 
 </head>
