--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ Licence URI: https://www.os-templates.com/template-terms
 <title>Ski Lucifer</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <meta http-equiv="last-modified" content="Sun, 16 Sep 2018 09:00:46 GMT" />
+  <meta http-equiv="last-modified" content="Thu, 20 Sep 2018 09:00:46 GMT" />
 <link href="layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
 
 </head>
@@ -31,14 +31,20 @@ Licence URI: https://www.os-templates.com/template-terms
   <header id="header" class="hoc clear"> 
     <!-- ################################################################################################ -->
     <div id="logo" class="one_half first">
-      <h1><a href="index.html"><img src="images/path4744.png" style="height: 112px; float: left;"/></a></h1>
+      <h1><a href="index.html"><img src="images/logo.png" style="height: 92px; float: left;"/></a></h1>
     </div>
 
-    <div class="one_quarter"><strong><i class="far fa-clock rgtspace-5"></i> Vlek v provozu :</strong> 09.00 - 16.30
-      <br /></div>
     <div class="one_quarter">
-      <strong><i class="fas fa-phone rgtspace-5"></i> Zavolejte nám:</strong> +420 602 879 598
+      <strong><i class="fas fa-snowflake rgtspace-5" style="color: lightblue"></i> Sněhové podmínky:</strong> 0cm - čekáme na sníh
     </div>
+
+    <div class="one_quarter">
+    <!--  <strong> <i class="fas fa-check-circle rgtspace-5" style="color: green;"></i>Vlek v provozu :</strong><i class="far fa-clock rgtspace-5"></i> 09.00 - 16.30-->
+      <strong> <i class="fas fas fa-minus-circle rgtspace-5" style="color: red;"></i>Velký vlek mimo provoz </strong><br>
+      <strong> <i class="fas fas fa-minus-circle rgtspace-5" style="color: red;"></i>Malý vlek mimo provoz</strong><br>
+      <strong> <i class="fas fas fa-minus-circle rgtspace-5" style="color: red;"></i>Peklo mimo provoz</strong>
+    </div>
+
 
     <!-- ################################################################################################ -->
   </header>
@@ -61,8 +67,8 @@ Licence URI: https://www.os-templates.com/template-terms
       <li><a href="#">Webkamera</a></li>
       <li><a class="drop" href="#">Ubytování</a>
         <ul>
-          <li><a href="#">Roubenka</a></li>
-          <li><a href="#">Penzion Niky</a></li>
+          <li><a href="ubytovani/roubenka.html">Roubenka</a></li>
+          <li><a href="ubytovani/penzion-niky.html">Penzion Niky</a></li>
         </ul>
       </li>
       <li><a href="#kudy-k-nam">Kudy k nám</a></li>
