--- a/ubytovani/penzion-niky.html
+++ b/ubytovani/penzion-niky.html
@@ -5,7 +5,8 @@
 <title>Penzion Niky - ubytování Josefův Důl</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-<link href="../layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
+  <meta http-equiv="last-modified" content="Wed, 03 Oct 2018 09:00:46 GMT" />
+  <link href="../layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
   <link rel="stylesheet" href="css/owl.carousel.min.css" type="text/css">
   <link rel="stylesheet" href="css/owl.theme.default.css" type="text/css">
 
@@ -125,12 +126,12 @@
         <tr>
           <td>dospělý</td>
           <td>265 Kč / noc</td>
-          <td>305 Kč / noc</td>
+          <td>335 Kč / noc</td>
         </tr>
         <tr>
           <td>dítě do 15 let</td>
           <td>220 Kč / noc</td>
-          <td>250 Kč / noc</td>
+          <td>275 Kč / noc</td>
         </tr>
         <tr>
           <td>dítě do 3 let</td>
@@ -140,7 +141,7 @@
         <tr>
           <td>minimální cena za pokoj, rozumí se za 1 noc při vícedenním pobytu</td>
           <td>530 Kč</td>
-          <td>610 Kč</td>
+          <td>640 Kč</td>
         </tr>
         <tr>
           <td id="mapa">v případě 1 noci účtujeme přirážku 30% na osobu</td>
