--- a/ubytovani/roubenka.html
+++ b/ubytovani/roubenka.html
@@ -5,7 +5,8 @@
 <title>Penzion Niky - ubytování Josefův Důl</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-<link href="../layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
+  <meta http-equiv="last-modified" content="Wed, 03 Oct 2018 09:00:46 GMT" />
+  <link href="../layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
   <link rel="stylesheet" href="css/owl.carousel.min.css" type="text/css">
   <link rel="stylesheet" href="css/owl.theme.default.css" type="text/css">
 
@@ -108,8 +109,8 @@
           </tr>
           <tr>
             <td>1 týden / 7 nocí</td>
-            <td>12 000 Kč</td>
-            <td>16 000 Kč</td>
+            <td>13 000 Kč</td>
+            <td>18 000 Kč</td>
           </tr>
 
           <tr>
