--- a/index.html
+++ b/index.html
@@ -10,10 +10,19 @@ Licence URI: https://www.os-templates.com/template-terms
 <html lang="">
 <!-- To declare your language - read more here: https://www.w3.org/International/questions/qa-html-language-declarations -->
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-128548614-1"></script>
+  <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-128548614-1');
+  </script>
 <title>Ski Lucifer</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <meta http-equiv="last-modified" content="Thu, 20 Sep 2018 09:00:46 GMT" />
+  <meta http-equiv="last-modified" content="Thu, 1 Nov 2018 09:00:46 GMT" />
 <link href="layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
 
 </head>
