--- a/ubytovani/penzion-niky.html
+++ b/ubytovani/penzion-niky.html
@@ -242,10 +242,9 @@
 <!-- ################################################################################################ -->
 <a id="backtotop" href="#top"><i class="fas fa-chevron-up"></i></a>
 <!-- JAVASCRIPTS -->
-<script src="../layout/scripts/jquery.min.js"></script>
-<script src="../layout/scripts/jquery.backtotop.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="../layout/scripts/jquery.mobilemenu.js"></script>
-<script src="js/owl.carousel.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.js"></script>
 <script>
 $(document).ready(function(){
   $(".owl-carousel").owlCarousel({
