uprava kvuli rychlosti

--- a/ubytovani/roubenka.html
+++ b/ubytovani/roubenka.html
@@ -14,7 +14,7 @@
 <title>Penzion Niky - ubytování Josefův Důl</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <meta http-equiv="last-modified" content="Thu, 1 Nov 2018 09:00:46 GMT" />
+  <meta http-equiv="last-modified" content="Sun, 9 Dec 2018 09:00:46 GMT" />
   <link href="../layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
   <link rel="stylesheet" href="css/owl.carousel.min.css" type="text/css">
   <link rel="stylesheet" href="css/owl.theme.default.css" type="text/css">
@@ -39,7 +39,7 @@
       <ul class="nospace">
         <li>Rezervace:  </li>
         <li><i class="fas fa-phone rgtspace-5"></i> +420 777 847 936</li>
-        <li><i class="fas fa-envelope rgtspace-5"></i> info@skilucifer.cz</li>
+        <li><i class="fas fa-envelope rgtspace-5"></i> ski_moravek@volny.cz</li>
       </ul>
     </div>
     <!-- ################################################################################################ -->
