--- a/ubytovani/penzion-niky.html
+++ b/ubytovani/penzion-niky.html
@@ -14,7 +14,7 @@
 <title>Penzion Niky - ubytování Josefův Důl</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <meta http-equiv="last-modified" content="Thu, 1 Nov 2018 09:00:46 GMT" />
+  <meta http-equiv="last-modified" content="Sun, 9 Dec 2018 09:00:46 GMT" />
   <link href="../layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
   <link rel="stylesheet" href="css/owl.carousel.min.css" type="text/css">
   <link rel="stylesheet" href="css/owl.theme.default.css" type="text/css">
@@ -24,9 +24,9 @@
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
-<div class="wrapper row0">
+<!--<div class="wrapper row0">
   <div id="topbar" class="hoc clear"> 
-    <!-- ################################################################################################ -->
+    &lt;!&ndash; ################################################################################################ &ndash;&gt;
     <div class="fl_left">
       <ul class="nospace">
         <li><a href="../index.html"><i class="fas fa-home fa-lg"></i></a></li>
@@ -39,16 +39,48 @@
       <ul class="nospace">
         <li>Rezervace:  </li>
         <li><i class="fas fa-phone rgtspace-5"></i> +420 777 847 936</li>
-        <li><i class="fas fa-envelope rgtspace-5"></i> info@skilucifer.cz</li>
+        <li><i class="fas fa-envelope rgtspace-5"></i> ski_moravek@volny.cz</li>
       </ul>
     </div>
-    <!-- ################################################################################################ -->
+    &lt;!&ndash; ################################################################################################ &ndash;&gt;
   </div>
-</div>
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<div class="wrapper bgded overlay" style="height:363px;background-image:url('img/panorama22.jpg');">
+</div>-->
 
+<div class="wrapper row1">
+  <header id="header" class="hoc clear">
+    <div id="logo" class="one_half first">
+      <h1><a href="index.html"><img src="../images/penzion-niky-logo.png" alt="Logo Penzion Niky - Jizerské hory - Josefův Důl" style="height: 75px; float: left;"/></a></h1>
+    </div>
+    <div class="one_half">
+      <nav id="mainav" class="hoc clear" style="color: #000000">
+        <!-- ################################################################################################ -->
+        <ul class="clear">
+          <li><a href="#cenik">Ceník</a></li>
+          <li><a href="#galerie">Galerie</a></li>
+          <li><a href="#kudy-k-nam">Kudy k nám</a></li>
+        </ul>
+        <!-- ################################################################################################ -->
+      </nav>
+    </div>
+  </header>
+</div>
+
+
+
+<!-- ################################################################################################ -->
+<!-- ################################################################################################ -->
+<div class="hoc clear" style="background-color: #373737">
+  <div class="one_half first" style="height: 400px">
+    <img src="../images/niky.jpg" />
+  </div>
+  <div class="one_half">
+    <p style="color: white;margin:20px 0 20px 0; font-size:1.8rem; letter-spacing:5px; line-height: 1.2">Krásná příroda Jizerských hor
+      <br><br>Apartmány vhodné pro rodiny
+      <br><br>Dětské hřiště a bazén
+      <br><br>Nádherné výhledy
+      <br><br>Rezervujte na <br><strong>ski_moravek@volny.cz</strong>
+    </p>
+  </div>
 </div>
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
@@ -72,8 +104,6 @@
 
           Lze si pronajmout jízdní kola a lyžařské vybavení. Niky má zahradu s krbem a venkovním posezením a dětským hřištěm.</p>
       </section>
-
-      <hr class="btmspace-50">
 
       <section id="nabidka" class="btmspace-50">
         <sectiontitle>
@@ -167,11 +197,45 @@
         <sectiontitle>
           <h6>Galerie</h6>
         </sectiontitle>
+      <ul class="nospace group overview">
+        <li class="one_third">
+          <figure>
+            <img src="../images/niky.jpg" alt="Penzion Niky">
+            <figcaption>
+              <h6 class="heading">Penzion Niky</h6>
+              <p>Penzion Niky pohled ze silnice</p>
+            </figcaption>
+          </figure>
+        </li>
+        <li class="one_third">
+          <figure>
+            <img src="../images/cerveny.jpg" alt="Červený apartmán">
+            <figcaption>
+              <h6 class="heading">Červený apartmán</h6>
+              <p>Černý apartmán se čtyřmi lůžky</p>
+            </figcaption>
+          </figure>
+        </li>
+        <li class="one_third">
+          <figure>
+            <img src="../images/modry.jpg" alt="Modrý apartmán">
+            <figcaption>
+              <h6 class="heading">Modrý apartmán</h6>
+              <p>Modrý apartmán se čtyřmi lůžky</p>
+            </figcaption>
+          </figure>
+        </li>
+        <li class="one_third">
+          <figure>
+            <img src="../images/bazen.jpg" alt="Bazén">
+            <figcaption>
+              <h6 class="heading">Bazén</h6>
+              <p>Vytápěný bazén po rekonstrukci plně uzaviratelný</p>
+            </figcaption>
+          </figure>
+        </li>
 
-      <div class="owl-carousel owl-theme">
-        <div class="item"><img src="img/bazen.jpg" style="width: 100%; display: block; height: auto"></div>
-        <div class="item"><img src="../images/niky-250.jpg" style="width: 100%; display: block; height: auto"></div>
-      </div>
+      </ul>
       </section>
 
       <hr class="btmspace-50">
