--- a/index.html
+++ b/index.html
@@ -17,17 +17,18 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta http-equiv="last-modified" content="Sun, 9 Dec 2018 09:00:46 GMT" />
 <link href="layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
+  <link href="ubytovani/css/main.css" rel="stylesheet" type="text/css" media="all">
 
 </head>
 <body id="top">
 
 <div class="wrapper row1">
   <header id="header" class="hoc clear"> 
-    <div id="logo" class="one_half first">
-      <h1><a href="index.html"><img src="images/logo.png" alt="Logo Ski Lucifer - Jizerské hory - Josefův Důl" style="height: 75px; float: left;"/></a></h1>
+    <div class="one_half first">
+      <h1><a href="index.html"><img src="images/logo.png" class="logo" alt="Logo Ski Lucifer - Jizerské hory - Josefův Důl" /></a></h1>
     </div>
     <div class="one_half">
-    <nav id="mainav" class="hoc clear" style="color: #000000">
+      <nav id="mainav" class="hoc clear" style="color: #000000;">
       <!-- ################################################################################################ -->
       <ul class="clear">
         <li><a class="drop" href="#">Ceník</a>
@@ -560,7 +561,7 @@
         <h6 class="heading">Webkamera</h6>
       </div>
       <div class="wrapper" style="text-align: center">
-        <img style="-webkit-user-select: none;" src="https://www.webcamlive.cz/outputCache/archiv_clear__274_2018_20180915182002_518.jpg_maxSize0_squarefalse_bgColorFFFFFF_width0_height0_tagtrue_fontSize14_barHeight23.jpg">
+          <img src="https://www.infocesko.cz/content/inphoto.aspx?mistoid=1112&pt=4&lid=1&clid=1" />
       </div>
     </section>
 
