--- a/ubytovani/penzion-niky.html
+++ b/ubytovani/penzion-niky.html
@@ -16,40 +16,15 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta http-equiv="last-modified" content="Sun, 9 Dec 2018 09:00:46 GMT" />
   <link href="../layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
-  <link rel="stylesheet" href="css/owl.carousel.min.css" type="text/css">
-  <link rel="stylesheet" href="css/owl.theme.default.css" type="text/css">
+  <link href="../ubytovani/css/main.css" rel="stylesheet" type="text/css" media="all">
 
 </head>
 <body id="top">
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<!--<div class="wrapper row0">
-  <div id="topbar" class="hoc clear"> 
-    &lt;!&ndash; ################################################################################################ &ndash;&gt;
-    <div class="fl_left">
-      <ul class="nospace">
-        <li><a href="../index.html"><i class="fas fa-home fa-lg"></i></a></li>
-        <li><a href="#cenik">Ceník</a></li>
-        <li><a href="#galerie">Galerie</a></li>
-        <li><a href="#kudy-k-nam">Kudy k nám</a></li>
-      </ul>
-    </div>
-    <div class="fl_right">
-      <ul class="nospace">
-        <li>Rezervace:  </li>
-        <li><i class="fas fa-phone rgtspace-5"></i> +420 777 847 936</li>
-        <li><i class="fas fa-envelope rgtspace-5"></i> ski_moravek@volny.cz</li>
-      </ul>
-    </div>
-    &lt;!&ndash; ################################################################################################ &ndash;&gt;
-  </div>
-</div>-->
 
 <div class="wrapper row1">
   <header id="header" class="hoc clear">
     <div id="logo" class="one_half first">
-      <h1><a href="index.html"><img src="../images/penzion-niky-logo.png" alt="Logo Penzion Niky - Jizerské hory - Josefův Důl" style="height: 75px; float: left;"/></a></h1>
+      <h1><a href="../index.html"><img src="../images/penzion-niky-logo.png"  class="logo" alt="Logo Penzion Niky - Jizerské hory - Josefův Důl" /></a></h1>
     </div>
     <div class="one_half">
       <nav id="mainav" class="hoc clear" style="color: #000000">
@@ -69,16 +44,20 @@
 
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
-<div class="hoc clear" style="background-color: #373737">
-  <div class="one_half first" style="height: 400px">
+<div class="hoc clear hero-container">
+  <div class="one_half first hero-image">
     <img src="../images/niky.jpg" />
   </div>
-  <div class="one_half">
-    <p style="color: white;margin:20px 0 20px 0; font-size:1.8rem; letter-spacing:5px; line-height: 1.2">Krásná příroda Jizerských hor
+  <div class="one_half hero-text ">
+    <p>Krásná příroda Jizerských hor
       <br><br>Apartmány vhodné pro rodiny
       <br><br>Dětské hřiště a bazén
       <br><br>Nádherné výhledy
-      <br><br>Rezervujte na <br><strong>ski_moravek@volny.cz</strong>
+      <br>
+      <div class="hero-cta">
+        Rezervujte přes <br><strong>ski_moravek@volny.cz</strong>
+      </div>
+
     </p>
   </div>
 </div>
