--- a/ubytovani/roubenka.html
+++ b/ubytovani/roubenka.html
@@ -11,49 +11,56 @@
 
       gtag('config', 'UA-128548614-1');
   </script>
-<title>Penzion Niky - ubytování Josefův Důl</title>
+<title>Roubenka u vleku - ubytování Josefův Důl</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta http-equiv="last-modified" content="Sun, 9 Dec 2018 09:00:46 GMT" />
   <link href="../layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
-  <link rel="stylesheet" href="css/owl.carousel.min.css" type="text/css">
-  <link rel="stylesheet" href="css/owl.theme.default.css" type="text/css">
+  <link href="../ubytovani/css/main.css" rel="stylesheet" type="text/css" media="all">
 
 </head>
 <body id="top">
 <!-- ################################################################################################ -->
+<div class="wrapper row1">
+  <header id="header" class="hoc clear">
+    <div id="logo" class="one_half first">
+      <h1><a href="../index.html"><img src="../images/roubenka-u-vleku.png"  class="logo" alt="Logo Roubenka u vleku - Jizerské hory - Josefův Důl" /></a></h1>
+    </div>
+    <div class="one_half">
+      <nav id="mainav" class="hoc clear"  style="color: #000000">
+        <!-- ################################################################################################ -->
+        <ul class="clear">
+          <li><a href="#cenik">Ceník</a></li>
+          <li><a href="#galerie">Galerie</a></li>
+          <li><a href="#kudy-k-nam">Kudy k nám</a></li>
+        </ul>
+        <!-- ################################################################################################ -->
+      </nav>
+    </div>
+  </header>
+</div>
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
-<div class="wrapper row0">
-  <div id="topbar" class="hoc clear"> 
-    <!-- ################################################################################################ -->
-    <div class="fl_left">
-      <ul class="nospace">
-        <li><a href="../index.html"><i class="fas fa-home fa-lg"></i></a></li>
-        <li><a href="#cenik">Ceník</a></li>
-        <li><a href="#galerie">Galerie</a></li>
-        <li><a href="#kudy-k-nam">Kudy k nám</a></li>
-      </ul>
+<div class="hoc clear hero-container">
+  <div class="one_half first hero-image">
+    <img src="../images/roubenka.jpg" />
+  </div>
+  <div class="one_half hero-text ">
+    <p>Krásná příroda Jizerských hor
+      <br><br>Chalupa pro velkou rodinu či partu kamarádů
+      <br><br>Přímo u sjezdovky
+      <br><br>V klidném prostředí
+      <br>
+    <div class="hero-cta">
+      Rezervujte přes <br><strong>ski_moravek@volny.cz</strong>
     </div>
-    <div class="fl_right">
-      <ul class="nospace">
-        <li>Rezervace:  </li>
-        <li><i class="fas fa-phone rgtspace-5"></i> +420 777 847 936</li>
-        <li><i class="fas fa-envelope rgtspace-5"></i> ski_moravek@volny.cz</li>
-      </ul>
-    </div>
-    <!-- ################################################################################################ -->
+
+    </p>
   </div>
 </div>
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
-<div class="wrapper bgded overlay" style="height:333px;">
-  <p style="font-size: 56px; text-align: center; padding-top: 50px; margin-top: 0">Stránky ve výstavbě</p>
-</div>
 <!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-
 
 <div class="wrapper row3">
   <main class="hoc clear" style="padding-top: 40px;">
@@ -142,15 +149,50 @@
       </section>
       <hr class="btmspace-50">
 
-      <section id="galerie" class="btmspace-50">
-        <sectiontitle>
-          <h6>Galerie</h6>
-        </sectiontitle>
+    <section id="galerie" class="btmspace-50">
+      <sectiontitle>
+        <h6>Galerie</h6>
+      </sectiontitle>
+      <ul class="nospace group overview">
+        <li class="one_third">
+          <figure>
+            <img src="../images/roubenka.jpg" alt="Roubenka u vleku">
+            <figcaption>
+              <h6 class="heading">Roubenka u vleku</h6>
+              <p>Roubenka u vleku pohled ze sjezdkovky</p>
+            </figcaption>
+          </figure>
+        </li>
+        <li class="one_third">
+          <figure>
+            <img src="../images/roubenka-sjezdovka.jpg" alt="Roubenka - pohled na sjezdovku">
+            <figcaption>
+              <h6 class="heading">Poloha Roubenky</h6>
+              <p>Ideální poloha Roubenky přímo u sjezdovky</p>
+            </figcaption>
+          </figure>
+        </li>
+        <li class="one_third">
+          <figure>
+            <img src="../images/roubenka-interier.jpg" alt="Interiér Roubenky">
+            <figcaption>
+              <h6 class="heading">Interiér Roubenky</h6>
+              <p>Interiér Roubenky - společenská místnost</p>
+            </figcaption>
+          </figure>
+        </li>
+        <li class="one_third">
+          <figure>
+            <img src="../images/roubenka-koupelna.jpg" alt="Koupelna - Roubenka">
+            <figcaption>
+              <h6 class="heading">Koupelna</h6>
+              <p>Jedna z koupelen</p>
+            </figcaption>
+          </figure>
+        </li>
 
-      <div class="owl-carousel owl-theme">
-        <div class="item"><img src="img/beneska.jpg" style="width: 100%; display: block; height: auto"></div>
-      </div>
-      </section>
+      </ul>
+    </section>
 
       <hr class="btmspace-50">
 
